--- a/_layouts/algoritmeregisters.html
+++ b/_layouts/algoritmeregisters.html
@@ -58,7 +58,7 @@
               {{ site.description }}
             </p>
             <p>
-                Algoritmeregister aanmelden? Stuur een e-mail naar <a href="mailto:info@algoritmeregister.nl">info@algoritmeregister.nl</a>
+                Algoritmeregister aanmelden? Stuur een e-mail naar <a href="mailto:info@algoritmeregister.org">info@algoritmeregister.org</a>
             </p>
           </div>
         </div>
@@ -73,8 +73,9 @@
             }
             .card {
                 padding: 1em;
-                margin: 1em;
-                border-bottom: 2px solid #AAA;
+                margin-bottom: 1em;
+                border-bottom: 1px solid #CCC;
+                background: #F4FAFF;
             }
             .type {
                 background: #CCC;
