--- a/_layouts/algoritmeregisters.html
+++ b/_layouts/algoritmeregisters.html
@@ -92,7 +92,7 @@
             <div class="card">
               <p style="margin-bottom: 0">{{ reg.organisation }}</p>
               <h2>{{ reg.title }}&emsp;<span class="type">{{ reg.type }}</span></h2>
-              <p>{{ reg.description }}</[]>
+              <p style="font-style: italic; color: #777">"{{ reg.description }}"</p>
               <p>
                   <a target="_blank" href="{{ reg.url }}">{{ reg.url }}&nbsp;<img style="vertical-align: baseline;" src="/img/external-link.svg"></a>
               </p>
