add status filter

--- a/_layouts/algoritmeregisters.html
+++ b/_layouts/algoritmeregisters.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="w-max-wrapper mx-auto flex">
+    <div class="w-max-wrapper mx-auto">
       <div class="md-zone">
         <style>
           .cards {
@@ -48,20 +48,35 @@
             padding: 1em;
             margin-top: 2em;
           }
-          .search input {
+          .search input,
+          .search select {
             font-size: 1em;
             padding: 0.5em;
           }
         </style>
 
         <div class="search">
-          <p>Filter op naam:&emsp;<input type="text" placeholder="Voer zoektekst in" id="filter-input"></p>
+          <p>Filter op naam:&emsp;<input type="text" placeholder="Voer zoektekst in" id="filter-title-input"></p>
           <script>
-            let filterInput = document.getElementById("filter-input");
-            filterInput.onkeyup = function (event) {
+            let filterTitleInput = document.getElementById("filter-title-input");
+            filterTitleInput.onkeyup = function (event) {
+              document.getElementById("filter-status-select").selectedIndex = 0; //reset other filter
               let str = event.target.value;
               Array.prototype.forEach.call(document.getElementsByClassName("card"), function (el) {
-                el.style.display = el.dataset.filter.toLowerCase().includes(str.toLowerCase()) ?
+                el.style.display = el.dataset.filterTitle.toLowerCase().includes(str.toLowerCase()) ?
+                  "block" :
+                  "none";
+              });
+            }
+          </script>
+          <p>Filter op status:&emsp;<select id="filter-status-select"><option></option><option>in gebruik</option><option>in ontwikkeling</option></select></p>
+          <script>
+            let filterStatusSelect = document.getElementById("filter-status-select");
+            filterStatusSelect.onchange = function (event) {
+              document.getElementById("filter-title-input").value = ''; //reset other filter
+              let str = event.target.value;
+              Array.prototype.forEach.call(document.getElementsByClassName("card"), function (el) {
+                el.style.display = el.dataset.filterStatus.toLowerCase().includes(str.toLowerCase()) ?
                   "block" :
                   "none";
               });
@@ -70,16 +85,22 @@
         </div>
 
         <div class="cards">
-          {% assign regs = site.data.algoritmeregisters | sort: 'title' %} {%
-          for reg in regs %}
-          <div class="card" data-filter="{{reg.title}}">
+          {% assign regs = site.data.algoritmeregisters | sort: 'title' %}
+          {% for reg in regs %}
+          <div class="card" data-filter-title="{{reg.title}}" data-filter-status="{{reg.status}}">
+            <div style="float:right">
+              <p style="font-size:0.85em">{{ reg.status }}</p>
+            </div>
             <p style="margin-bottom: 0">{{ reg.organisation }}</p>
             <h2>
               {{ reg.title }}&emsp;<span class="type">{{ reg.type }}</span>
             </h2>
+            {% if reg.description %}
             <p style="font-style: italic; color: #777">
               "{{ reg.description }}"
             </p>
+            {% endif %}
+            {% if reg.url %}
             <p>
               <a target="_blank" href="{{ reg.url }}"
                 >{{ reg.url }}&nbsp;<img
@@ -87,6 +108,7 @@
                   src="/img/external-link.svg"
               /></a>
             </p>
+            {% endif %}
           </div>
           {% endfor %}
         </div>
