add alt for images and aria roles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer role="footer">
   <div class="w-max-wrapper mx-auto flex">
     <p class="text-h4 my2 px2">&copy; 2022 - Algoritmeregister</p>
   </div>
