--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
     <img
       src="//www.algoritmeregister.org/img/algoritmeregister-logo.svg"
       class="w-main-logo"
+      alt="algoritmeregister logo"
     />
   </a>
   <nav class="flex align-center">
@@ -14,6 +15,7 @@
       <img
         src="//www.algoritmeregister.org/img/github-repo-link.svg"
         class="display-block"
+        alt="github logo"
       />
     </a>
   </nav>
