add beginnen page, not linked yet

--- a/_layouts/algoritmeregisters.html
+++ b/_layouts/algoritmeregisters.html
@@ -6,37 +6,9 @@
   <body>
     {% include header.html %}
 
-    <div class="bg-light-blue">
-      <div class="w-max-wrapper mx-auto flex">
-        <div class="flex-1" role="heading">
-          <h1 class="text-h1 mb3">{{ site.title }}</h1>
-          <div class="md-zone">
-            <p>{{ site.description }}</p>
-            <p>
-              Algoritmeregister aanmelden? Stuur een e-mail naar
-              <a href="mailto:info@algoritmeregister.org"
-                >info@algoritmeregister.org</a
-              >
-            </p>
-          </div>
-        </div>
-      </div>
+    {% include tab-nav.html %}
 
-      <div class="w-max-wrapper mx-auto flex">
-        <div class="switch" role="navigation">
-          <nav>
-            <a class="tab-link {% if page.path == "index.md" %}active{% endif %}" href="/">Algoritmeregisters</a>
-            <a class="tab-link {% if page.path == "algoritmes.md" %}active{% endif %}" href="/algoritmes">Nationale catalogus</a>
-          </nav>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-max-wrapper mx-auto" style="margin-top: 2rem">
-      <div class="md-zone" role="main">
-        {{ content }}
-      </div>
-    </div>
+    {% include content.html %}
 
     {% include footer.html %}
   </body>
