add centrale vindplaats (wip)

--- a/_includes/tab-nav.html
+++ b/_includes/tab-nav.html
@@ -17,8 +17,8 @@
     <div class="w-max-wrapper mx-auto flex">
       <div class="switch" role="navigation">
         <nav>
-          <a class="tab-link {% if page.path == "index.md" %}active{% endif %}" href="/">Algoritmeregisters</a>
-          <a class="tab-link {% if page.path == "algoritmes.md" %}active{% endif %}" href="/algoritmes">Nationale catalogus</a>
+          <a class="tab-link {% if page.path == "algoritmes.md" %}active{% endif %}" href="/algoritmes">Algoritmes doorzoeken</a>
+          <a class="tab-link {% if page.path == "index.md" %}active{% endif %}" href="/">Onderliggende algoritmeregisters</a>
           <!-- <a class="tab-link {% if page.path == "beginnen.md" %}active{% endif %}" href="/beginnen">Beginnen met een algoritmeregister</a> -->
         </nav>
       </div>
