--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="//www.algoritmeregister.org/css/main.css" />
 <link rel="stylesheet" href="/css/main.css" />
+<link rel="stylesheet" href="/css/compiled-dont-edit.css">
 <link
   rel="mask-icon"
   href="//www.algoritmeregister.org/img/algoritmeregister-logo-sans-text.svg"
