--- a/_layouts/algoritmeregisters.html
+++ b/_layouts/algoritmeregisters.html
@@ -8,7 +8,11 @@
 
     {% include tab-nav.html %}
 
+    {% include search-results.html %}
+
+    {% comment %}
     {% include content.html %}
+    {% endcomment %}
 
     {% include footer.html %}
   </body>
