--- a/_includes/search-results.html
+++ b/_includes/search-results.html
@@ -1,4 +1,4 @@
-<div class="search-results m-y6">
+<div class="search-results m-b6">
 	<div class="layout">
 		<div class="layout-1 layout-md-1-4">
 			<div class="color-bg-3 p-4">
