--- a/css/compiled-dont-edit.css
+++ b/css/compiled-dont-edit.css
@@ -842,7 +842,25 @@ input[type=text] {
 .w-25 {
   width: 25%;
 }
+/* Add */
 .hr {
   border: 0;
   border-top: 1px solid #ccc;
+}
+.search-bar-input {
+  border: 0;
+  border-left: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  width: 100%;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.search-bar-btn {
+  border: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.search-bar-icon {
+  max-width: 20px;
 }
