--- a/_layouts/algoritmes-zoeken.html
+++ b/_layouts/algoritmes-zoeken.html
@@ -8,7 +8,12 @@
 
     {% include tab-nav.html %}
 
+    {% include search-bar.html %}
+    {% include search-results.html %}
+
+    {% comment %}
     {% include content.html %}
+    {% endcomment %}
 
     {% include footer.html %}
   </body>
