--- a/_includes/search-bar.html
+++ b/_includes/search-bar.html
@@ -3,7 +3,7 @@
 		<div class="layout-1 layout-md-1-2">
 			<form>
 				<div class="u-flex">
-					<input type="text" placeholder="Zoek op onderwerp" class="search-bar-input text-body u-flex-1 p-3 u-border-radius" id="search-bar">
+					<input type="text" placeholder="Zoek op organisatie, titel of omschrijving" class="search-bar-input text-body u-flex-1 p-3 u-border-radius" id="search-bar">
 					<button class="search-bar-btn color-bg-2 p-y3 p-x4 u-border-radius">
 						<img src="/img/icon-search-w.svg" class="search-bar-icon mx-auto">
 					</button>
