--- a/_includes/search-results.html
+++ b/_includes/search-results.html
@@ -35,11 +35,11 @@
 			</div>
 		</div>
 		<div class="layout-1 layout-md-3-4">
-			<h1 class="text-h1 m-b4 m-t3"><span id="numberOfSearchResults"></span> Zoekresultaten</h1>
+			<h1 class="text-h1 m-b4 m-t3"><span id="numberOfSearchResults">Inladen</span> geregistreerde algoritmes</h1>
 			<div id="search-results"></div>
 
 			<script type="text/html" id="search_result_tmpl">
-				<div data-search-text="<%=name.toLowerCase()%> <%=organization.toLowerCase()%>">
+				<div data-search-text="<%=name.toLowerCase()%> <%=organization.toLowerCase()%> <%=description_short%>">
 					<div class="m-y4">
 						<h2 class="text-h2 m-b2 color-2"><%=name%></h2>
 						<p class="text-body m-b4"><%=description_short%></p>
