--- a/_includes/search-results.html
+++ b/_includes/search-results.html
@@ -28,8 +28,8 @@
 					<h3 class="text-h4">Organisatie</h3>
 					<p class="text-body">Gemeente Den Haag <span class="color-2">(0)</span></p>
 					<p class="text-body">Gemeente Utrecht <span class="color-2">(0)</span></p>
+					<p class="text-body">Gemeente Amsterdam <span class="color-2">(0)</span></p>
 					<!-- <p class="text-body">Min BZK <span class="color-2">(12)</span></p> -->
-					<!-- <p class="text-body">Gemeente Amsterdam <span class="color-2">(3)</span></p> -->
 					<p><a href="" class="text-body color-2">meer ...</a></p>
 				</div>
 			</div>
