move script loads

--- a/_layouts/algoritmes-zoeken.html
+++ b/_layouts/algoritmes-zoeken.html
@@ -9,6 +9,9 @@
     {% include tab-nav.html %}
 
     {% include content.html %}
+    
+    <script src="/js/microtemplating.js"></script>
+    <script type="module" src="/js/dataloader.js"></script>
 
     <div id="details-page" style="display: none">
       {% include details.html %}
