--- a/_includes/details.html
+++ b/_includes/details.html
@@ -1,6 +1,56 @@
 <div id="details">
 </div>
 <script type="text/html" id="details_tmpl">
-    <%=name%><br>
-    <%=id%>
+    <div class="color-bg-3 p-y4">
+        <div class="layout color-bg-1 p-y4 u-border-radius">
+            <div class="layout-3-4">
+                <div class="color-bg-1 p-6 u-border-radius">
+                    <h1 class="text-h1 m-b4"><%=name%></h1>
+                    <p class="text-body m-b4"><%=description_short%></p>
+                    <div class="u-flex">
+                        <div class="m-r5">
+                            <h4 class="text-h4">Organisatie</h4>
+                            <p class="text-body"><%=organization%></p>
+                        </div>
+                        <div class="m-r5">
+                            <h4 class="text-h4">Thema</h4>
+                            <p class="text-body"><%=domain%></p>
+                        </div>
+                        <div class="m-r5">
+                            <h4 class="text-h4">Type</h4>
+                            <p class="text-body"><%=type%></p>
+                        </div>
+                        <div class="m-r5">
+                            <h4 class="text-h4">Status</h4>
+                            <p class="text-body"><%=status%></p>
+                        </div>
+                    </div>
+
+                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+                        <a href="#" class="text-h4">Inzet</a>
+                    </div>
+                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+                        <a href="#" class="text-h4">Toepassing</a>
+                    </div>
+                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+                        <a href="#" class="text-h4">Toezicht</a>
+                    </div>
+                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+                        <a href="#" class="text-h4">Juridisch</a>
+                    </div>
+                </div>
+            </div>
+            <div class="layout-1-4">
+                <div class="m-t6">
+                    <div class="color-bg-3 p-x4 p-y4">
+                        <h3 class="text-h3 m-b2">Bron gegegevens</h3>
+                        <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </script>
