--- a/_includes/details.html
+++ b/_includes/details.html
@@ -5,6 +5,7 @@
         <div class="layout color-bg-1 p-y4 u-border-radius">
             <div class="layout-3-4">
                 <div class="color-bg-1 p-6 u-border-radius">
+                    <p class="text-body"><a href="/algoritmes">« terug</a></p>
                     <h1 class="text-h1 m-b4"><%=name%></h1>
                     <p class="text-body m-b4"><%=description_short%></p>
                     <div class="u-flex">
@@ -44,10 +45,8 @@
                 <div class="m-t6">
                     <div class="color-bg-3 p-x4 p-y4">
                         <h3 class="text-h3 m-b2">Bron gegegevens</h3>
-                        <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat.</p>
+                        <p class="text-body">Deze informatie is geautomatiseerd opgehaald uit het algoritmeregister van <%=organization%>.</p>
+                        <button style="background: #4D80E2; color: #fff; border: 0; font-size: 1em; padding: 0.4em; margin-top: 1em"><a href="<%=website%>">Bekijk de bronwebsite</a></button>
                     </div>
                 </div>
             </div>
