update link to origin website button

--- a/_includes/details.html
+++ b/_includes/details.html
@@ -46,7 +46,7 @@
                     <div class="color-bg-3 p-x4 p-y4">
                         <h3 class="text-h3 m-b2">Bron gegegevens</h3>
                         <p class="text-body">Deze informatie is geautomatiseerd opgehaald uit het algoritmeregister van <%=organization%>.</p>
-                        <button style="background: #4D80E2; color: #fff; border: 0; font-size: 1em; padding: 0.4em; margin-top: 1em"><a href="<%=website%>">Bekijk de bronwebsite</a></button>
+                        <a href="<%=website%>" target="_blank"><button style="cursor: pointer; border-radius: 1em; background: #4D80E2; color: #fff; border: 0; font-size: 1em; padding: 0.4em 1em; margin: 1em auto">Bekijk de bronwebsite</button></a>
                     </div>
                 </div>
             </div>
