change setup for dummy demo

--- a/_layouts/algoritmeregisters.html
+++ b/_layouts/algoritmeregisters.html
@@ -6,7 +6,11 @@
   <body>
     {% include header.html %}
 
+    {% include nav.html %}
+
+    {% comment %}
     {% include tab-nav.html %}
+    {% endcomment %}
 
     {% include content.html %}
 
