--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 
   {% include header.html %}
 
+  {% include nav.html %}
+
   <div class="bg-light-blue">
     <div class="flex mx-auto w-max-wrapper">
       <div class="flex-1 px2 py4">
