update nav labels

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,6 +13,6 @@
 </style>
 <nav style="background: #01689b">
     <a href="/">home</a>
-    <a href="/algoritmes">algoritmes</a>
-    <a href="/registers">bronnen</a>
+    <a href="/algoritmes">alle algoritmes</a>
+    <a href="/registers">bronregisters</a>
 </nav>
