--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
-<header class="bg-light-blue flex space-between p4">
-  <a href="/" class="flex">
+<header class="flex space-between p4">
+  <div class="flex-spacer"></div>
+  <a href="/" class="flex align-center">
     <img
       src="//www.algoritmeregister.org/img/algoritmeregister-logo.svg"
       class="w-main-logo"
@@ -8,9 +9,9 @@
   </a>
   <nav class="flex align-center">
     <!-- <a href="/" class="text-nav mr4">home</a> -->
-    <a href="https://www.algoritmeregister.org" class="text-nav mr4"
+    <!-- <a href="https://www.algoritmeregister.org" class="text-nav mr4"
       >meer informatie</a
-    >
+    > -->
     <a href="https://www.github.com/Algoritmeregister">
       <img
         src="//www.algoritmeregister.org/img/github-repo-link.svg"
