--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
-<header class="flex space-between p4">
-  <div class="flex-spacer"></div>
+<header class="flex space-between p4" style="justify-content: center;">
   <a href="/" class="flex align-center">
     <img
       src="//www.algoritmeregister.org/img/algoritmeregister-logo.svg"
@@ -7,11 +6,11 @@
       alt="algoritmeregister logo"
     />
   </a>
-  <nav class="flex align-center">
-    <!-- <a href="/" class="text-nav mr4">home</a> -->
-    <!-- <a href="https://www.algoritmeregister.org" class="text-nav mr4"
+  <!-- <nav class="flex align-center">
+    <a href="/" class="text-nav mr4">home</a>
+    <a href="https://www.algoritmeregister.org" class="text-nav mr4"
       >meer informatie</a
-    > -->
+    >
     <a href="https://www.github.com/Algoritmeregister">
       <img
         src="//www.algoritmeregister.org/img/github-repo-link.svg"
@@ -19,5 +18,5 @@
         alt="github logo"
       />
     </a>
-  </nav>
+  </nav> -->
 </header>
