update header hight

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="flex space-between p4" style="justify-content: center;">
+<header class="flex space-between p4" style="justify-content: center; height: 150px">
   <a href="/" class="flex align-center">
     <img
       src="//www.algoritmeregister.org/img/algoritmeregister-logo.svg"
