--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="flex-1 px2">
-      <img alt="abstracte tekening van een persoon voor een planningsbord" src="//www.algoritmeregister.org/img/temp-illustration-undraw-contact.png" srcset="/img/temp-illustration-undraw-contact@2x.png 2x">
+      <img alt="abstracte tekening van een persoon voor een planningsbord" src="//www.algoritmeregister.org/img/temp-illustration-undraw-contact.png" srcset="//www.algoritmeregister.org/img/temp-illustration-undraw-contact@2x.png 2x">
     </div> 
   </div>
 
