hide filters in mobile (for now)

--- a/_includes/filters.html
+++ b/_includes/filters.html
@@ -1,4 +1,9 @@
-<div class="layout-1 layout-md-1-4">
+<style>
+    @media screen and (max-width: 992px) {
+        #filters { display: none }
+    }
+</style>
+<div class="layout-1 layout-md-1-4" id="filters">
     <div class="color-bg-3 p-4">
         <h2 class="text-h2">Filters</h2>
         <div class="m-y4">
